--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-popover": "^1.0.6",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.6",
@@ -23,6 +24,7 @@
 		"eslint-config-next": "13.4.19",
 		"lucide-react": "^0.276.0",
 		"next": "13.4.19",
+		"next-themes": "^0.2.1",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
