--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-popover": "^1.0.6",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.6",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
