--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"dependencies": {
 		"@dnd-kit/core": "^6.0.8",
 		"@radix-ui/react-accordion": "^1.1.2",
+		"@radix-ui/react-collapsible": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-popover": "^1.0.6",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.6",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
